@@ -1,3 +1,11 @@
+
+2002-07-22  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/accidental-placement.cc (position_accidentals): document
+	two bugcases.
+
+	* lily/skyline.cc (skyline_meshing_distance): bugfixes.
+
 2002-07-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/lilypond-book.py (make_pixmap): Don't use quiet_system,
@@ -10,6 +18,9 @@
 	* lily/parser.yy: Revert to MARK scalar.
 
 2002-07-21  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/accidental.cc (accurate_boxes): add function to represent
+	flat with 2 boxes. Improves flat-flat accidental spacing. 
 
 	* lily/accidental-placement.cc (stagger_apes): try to arrange accs
 	in a C form, with the top accidental closet to the chord.
